get students &teachers
